erDiagram

    RAW_MESSAGES {
        bigint id PK
        string format
        text payload
        timestamp created_at
    }

    TRANSACTIONS {
        bigint id PK
        bigint raw_message_id FK
        string transaction_ref
        decimal amount
        string currency
        string status
        timestamp created_at
    }

    TRANSACTION_DETAILS {
        bigint id PK
        bigint transaction_id FK
        string mti
        string processing_code
        string response_code
    }

    PARSER_MAPPINGS {
        bigint id PK
        string message_format
        string source_field
        string target_property
        string target_type
        boolean required_flag
        boolean active_flag
    }

    TAGS {
        bigint id PK
        string name
    }

    TRANSACTION_TAGS {
        bigint transaction_id FK
        bigint tag_id FK
    }

    API_REQUESTS {
        bigint id PK
        bigint transaction_id FK
        string endpoint
        text request_json
        timestamp created_at
    }

    API_RESPONSES {
        bigint id PK
        bigint transaction_id FK
        int status_code
        text response_json
        timestamp created_at
    }

    LOGS {
        bigint id PK
        bigint transaction_id FK
        string level
        string message
        timestamp created_at
    }

    RAW_MESSAGES ||--o{ TRANSACTIONS : "produces"
    TRANSACTIONS ||--|| TRANSACTION_DETAILS : "has"
    TRANSACTIONS ||--o{ TRANSACTION_TAGS : "tagged"
    TAGS ||--o{ TRANSACTION_TAGS : "assigned"
    TRANSACTIONS ||--|| API_REQUESTS : "creates"
    TRANSACTIONS ||--|| API_RESPONSES : "receives"
    TRANSACTIONS ||--o{ LOGS : "logged"
